# rfp

./: .gitignore  README.md  demo.c  ncube.c  randfan.h
grow2d/: README.md  live_triplot.py
grow2d/archived/: geometry.py  grow.py
grow2d/src/: README.md  geometry.py  grow.py  grow2d.h  grow2d.pyx
pushing/: README.md  live_triplot.py  pyproject.toml  setup.py
pushing/pushing/: __init__.py  pushing.pyx
pushing/src/: README.md  demo.c  pushing.h
rfp/: live_triplot.py
rfp/src/: demo.c  det.h  hardcode_leibniz.py  pushing.h  rfp.h
src/: demo.c  det.h  hardcoded_dets_in_c.py  ncube.c  rfp.h
vcgame/: README.md  main.py
vcgame/game/: loop.py  player.py
vcgame/renderer/: renderer.py
vcgame/src/: display.py  generate_random.py  generate_reflexive.py  player.py
